// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard should de mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <div>
    ProductCard
  </div>
</div>
`;
